ubiquity-slideshow-ubuntu (4) UNRELEASED; urgency=low

  * Replace reference to 'Ubuntu Linux' with the correct title for the
    project, 'Ubuntu'.

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 27 Aug 2009 15:52:17 +0100

ubiquity-slideshow-ubuntu (3) karmic; urgency=low

  * Move translate-toolkit and gimp to build-deps-indep.
  * Removing trailing comma from dependencies.
  * Drop coreutils dependency as it's in essential.
  * Use the proper Vcs-Bzr field, rather than the old XS-Vcs-Bzr.
  * Replace entire GPL-2 copyright with a pointer to common-licenses.
  * Bump standards version to 3.8.3.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 24 Aug 2009 10:04:37 +0100

ubiquity-slideshow-ubuntu (2) karmic; urgency=low

  * Initial release in Ubuntu.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 18 Aug 2009 12:01:31 +0100

ubiquity-slideshow-ubuntu (1-0~ppa2) karmic; urgency=low

  * Added new build dependency: translate-toolkit.

 -- Dylan McCall <dylanmccall@gmail.com>  Thu,  2 Jul 2009 20:25:00 -0800

ubiquity-slideshow-ubuntu (1-0~ppa1) karmic; urgency=low

  * Initial release.

 -- Dylan McCall <dylanmccall@gmail.com>  Tue,  16 Jun 2009 16:37:00 -0800